fix Misalignment of input form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,7 +103,7 @@ header > p {
 /*----------------------
   Text Input Form Style
 ----------------------*/
-input[type="text"] {
+input[type="name"] {
   margin: 16px;
   padding: 4px;
   border-radius: 5px;
